# LLM-Finetuning-Toolkit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  compose.yaml  config.yml  finetune.sh  main.py  pyproject.toml  requirements.txt  target.list  target.txt  testing.md  toolkit.py  zephyr-post.md
bert-models/: README.md  ablate.sh  train.py
cohere-command/: cohere_finetune.py
docs/: docusaurus.config.js  package-lock.json  package.json  sidebars.js
examples/: ablation_config.yml  json_output_config.yml  llama2_config.yml  mistral_config.yml
falcon/: README.md  baseline_inference.sh  falcon_baseline_inference.py  falcon_classification.py  falcon_classification_inference.py  falcon_summarization.py  falcon_summarization_inference.py  prompts.py  run_lora.sh  sample_ablate.sh
flan-large/: README.md  flan_classification_inference.py  inference.sh  run_lora.sh  sample_ablate.sh
flan-t5/: README.md  flan_classification.py  flan_classification_inference.py  flan_summarization.py  flan_summarization_inference.py  run_prefix.sh  utils.py
gpt-3.5-turbo/: baseline_inference.sh  gpt_baseline_inference.py
inference/: README.md
jurassic/: README.md  custom_model_inference.sh  jurassic_baseline_inference.py
jurassic-2/: baseline_inference.sh  jurassic_baseline_inference.py  prompts.py  samsum_test.csv
llama2/: README.md  baseline_inference.sh  llama2_baseline_inference.py  llama2_classification.py  llama2_classification_inference.py  llama2_summarization.py  llama2_summarization_inference.py  llama_patch.py  prompts.py  run_lora.sh  sample_ablate.sh
llmtune/: __init__.py  config.yml
mistral/: README.md  baseline_inference.sh  mistral_baseline_inference.py  mistral_classification.py  mistral_classification_inference.py  mistral_summarization.py  mistral_summarization_inference.py  prompts.py  run_lora.sh  sample_ablate.sh
mosaic-mpt/: README.md  baseline_inference.sh  mpt_baseline_inference.py  mpt_classification.py  mpt_classification_inference.py  mpt_summarization.py  mpt_summarization_inference.py  prompts.py  run_lora.sh  sample_ablate.sh
notebooks/: 00_finetuning.ipynb  01_deploying_model.ipynb  02_sending_requests_vllm.ipynb  finetuning_model.ipynb  inference_deploying_model.ipynb  inference_sending_requests_vllm.ipynb
openai/: README.md  finetune_instructions.sh  gpt_baseline_inference.py  gpt_finetune.py  prompts.py
palmyra/: README.md  palmyra_baseline_inference.py
redPajama/: README.md  baseline_inference.sh  prompts.py  redpajama_baseline_inference.py  redpajama_classification.py  redpajama_classification_inference.py  redpajama_inference.py  redpajama_seq2seq.py  redpajama_summarization.py  redpajama_summarization_inference.py  run_lora.sh  sample_ablate.sh
test_utils/: test_config.py
tests/: test_ablation_utils.py  (+2 more)
(+334 files in other folders)
